@@ -2,7 +2,7 @@ module Cucumber #:nodoc:
   class VERSION #:nodoc:
     MAJOR = 0
     MINOR = 1
-    TINY  = 10
+    TINY  = 11
 
     STRING = [MAJOR, MINOR, TINY].join('.')
   end
